Fixed squished map problem

--- a/www/css/style.web.css
+++ b/www/css/style.web.css
@@ -1,4 +1,4 @@
-html, body, .container-fluid, .strabo-page-content, .map, #mapdiv {
+html, body, .container-fluid, .strabo-page-content, .map{
   height: 100%;
 }
 
@@ -7,6 +7,9 @@ html, body, .container-fluid, .strabo-page-content, .map, #mapdiv {
 }
 
 #mapdiv {
+  height:100%;
+  width:100%;
+  position:fixed;
   border-top: 0 solid #fff;
   border-bottom: 50px solid #fff;
 }
